# COMP_1SEM

CES-12/lab1/lab1hash200313_2221/: CMakeLists.txt
CES-12/lab1/lab1hash200313_2221/src/: hash.cpp  hashfunctions.cpp
CES-12/lab1/lab1hash200313_2221/test/: testLab1.cpp
CES-12/lab1/matlabhash190221/matlabhash/: comparehashfuncs.m
CES-12/lab2/labTree200416_1651/: CMakeLists.txt
CES-12/lab2/labTree200416_1651/lib/: IndexFactory.h  IndexPointsAbstract.h  IndexPointsStlMultimap.cpp  IndexPointsStlMultimap.h
CES-12/lab2/labTree200416_1651/src/: IndexPointsAluno.cpp  IndexPointsAluno.h  RBTree.cpp  RBTree.h  RBTreeNode.cpp  RBTreeNode.h
CES-12/lab2/labTree200416_1651/test/: testTree.cpp
CES-12/lab2/matlabdata/: logFit.m  oakByNorm.m
CES-12/lab3/labsort200423_1630/: CMakeLists.txt  compilarLabProf~  generateZipProf~
CES-12/lab3/labsort200423_1630/src/: mymergesort.cpp  myquicksort.cpp  myradixsort.cpp
CES-12/lab3/labsort200423_1630/test/: testSort.cpp
CES-12/lab3/matlabdata/: sims.m
CES-12/lab4/labParadigm200609_1451/: CMakeLists.txt
CES-12/lab4/labParadigm200609_1451/lib/: SSPInstanceGenerator.cpp  SSPInstanceGenerator.h  SSPSolverFactory.cpp
CES-12/lab4/labParadigm200609_1451/src/: SSPSolverBranchBound.cpp  SSPSolverPD.cpp  SubsetSumSolver.h  TrocoSolver.h  TrocoSolverDivConquer.cpp  TrocoSolverGreedy.cpp  TrocoSolverPD.cpp  testesAluno.cpp
CES-12/lab4/labParadigm200609_1451/test/: testSSP.cpp
CES-12/lab4/matlabdata/: sims.m  sims2.m
CES-12/lab5/labTSP200717_1428/src/: Graph.cpp  Graph.h  Heap.cpp  Heap.h  Triple.h  TspSolver.cpp  TspSolver.h
CES-12/lab5/labTSP200717_1428/test/: testTsp.cpp
CES-12/test/: CMakeLists.txt  main.cpp
CES-22/lista1/: ex1.py  ex10.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py
CES-22/lista2/: ex1.py  ex10.py  ex11.py  ex12.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py
CES-22/lista4/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py
CES-22/projeto2/telas/: index.css  index.html  mapbox.js
CMC-12/lab1/: cruise_control_aberta.slxc  cruise_control_fechada.slxc  cruise_control_identificacao.slx  data.mat  simulacoes.m
CMC-12/lab1/rodrigo.almeida_lab1/: cruise_control_aberta.slx  cruise_control_fechada.slx  identificarCruiseControl.m
CMC-12/lab2/: animacaoFollowline.m  avaliarFollowline.m  avaliarLinearidadeLateral.m  followline.avi  inicializarFollowline.m  inicializarFrontal.m  inicializarLateral.m  teste.m
CMC-12/lab2/rodrigo.almeida_lab2/: followline.avi  followline.slx  frontal.slx  lateral_linear.slx  lateral_naolinear.slx
CMC-12/lab3/: avaliarAntiwindup.m  avaliarControladorDiscreto.m  avaliarControladorPFeedforward.m  avaliarControladorPI.m  avaliarIndutor.m  avaliarTempoSubida.m  obterPlantaServo.m  obterPolosPI.m  projetarControladorPFeedforward.m  projetarControladorPI.m  servomotor_p_feedforward.slx  servomotor_p_feedforward.slxc  servomotor_pi.slx  servomotor_pi.slxc  servomotor_pi_discreto.slx  servomotor_pi_discreto.slxc
CMC-12/lab5/: avaliarAutopilotoLongitudinal.m  boeing747_longitudinal.slx  boeing747_longitudinal.slxc  obterControladorLongitudinal.m  obterPlantaLongitudinal.m  q21.m  q22.m
CMC-12/lab6/: obterMalhaCorrente.m  obterMalhaPosicao.m  projetarControladorCorrenteAnalitico.m  projetarControladorCorrenteOtimizacao.m  projetarControladorPosicaoAnalitico.m  projetarControladorPosicaoOtimizacao.m
CMC-12/lista10_cmc12/: questao1.m  questao2.m  questao3.m  questao4.m  questao5.m  test.m
CMC-12/lista11_cmc12/: questao1.m  questao2.m  questao3.m  questao4.m  questao5.m
CMC-12/lista1_cmc12/: questao2.m
CMC-12/lista1_cmc12/rodrigo.almeida_lista1/: questao3.m  questao4.m
CMC-12/lista2_cmc12/rodrigo.almeida_lista2/: questao3.m
CMC-12/lista3_cmc12/rodrigo.almeida_lista3/: questao1a.m  questao1b.m  questao2.m  questao3.m
CMC-12/lista4_cmc12/rodrigo.almeida_lista4/: questao1.m  questao2.m  questao3.m  questao4.m
CMC-12/lista5_cmc12/rodrigo.almeida_lista5/: questao1.m  questao2.m  questao3.m  questao4.m
CMC-12/lista6_cmc12/rodrigo.almeida_lista6/: questao1.m  questao2.m  questao3.m  questao4.m  questao5.m
CMC-12/lista7_cmc12/entrega/: questao1.m  questao2.m  questao3.m  questao4.m
CMC-12/lista8_cmc12/: questao1.m  questao3.m  questao4.m  questao5.m  test2.m
CMC-12/lista9_cmc12/: q3script.m  questao1.m  test.m
CMC-12/prova2/: questao4.m  r.m
CMC-12/prova4/: q2.m  q3.m  testt.m
EEA-21/labs/lab1/: Block1.bdf  Block3.bdf  Waveform.vwf  Waveform1.vwf  Waveform2.vwf  Waveform3.vwf  Waveform4.vwf  b3.bdf  b3.qpf  b3.qsf  lab1.bdf  lab1.qpf  lab1.qsf  lab1.qws  q42.bdf
(+1710 files in other folders)
